--- a/css/layout.css
+++ b/css/layout.css
@@ -445,7 +445,7 @@ input:-moz-placeholder {
 				margin-right: 0;
 			}
 			.b-plan .b-block ul li sup {
-				font-size: 9px;
+				font-size: 10px;
 			}
 	.b-plan-img.b-block {
 		margin-top: 285px;
@@ -653,7 +653,7 @@ input:-moz-placeholder {
 
 						}
 						.b-apartment .b-block .apartment-cont .main-desc li h4 {
-							font-size: 12px;
+							font-size: 14px;
 							line-height: 1.2;
 							margin-top: 6px;
 							letter-spacing: 1.5px;
@@ -667,7 +667,7 @@ input:-moz-placeholder {
 					}
 					.b-apartment .b-block .apartment-cont .main-desc .right {
 						width: 287px;
-						margin: 16px 22px 14px;
+						margin: 15px 22px 11px;
 						box-sizing: border-box;
 						text-align: left;
 					}
@@ -694,7 +694,7 @@ input:-moz-placeholder {
 							margin-top: 13px;
 						}
 							.b-apartment .b-block .apartment-cont .main-desc .right h5{
-								font-size: 10px;
+								font-size: 12px;
 								font-family: "pf_bague_sans_proregular";
 								line-height: 1.2;
 								letter-spacing: 1.3px;
@@ -704,7 +704,7 @@ input:-moz-placeholder {
 									font-size: 18px;
 									font-family: "pf_bague_sans_problack";
 									line-height: 1.2;
-									margin-top: 8px;
+									margin-top: 7px;
 								}
 									.b-apartment .b-block .apartment-cont .main-desc .right h6 sup{
 										font-size: 10px;
@@ -720,23 +720,35 @@ input:-moz-placeholder {
 
 		}
 			.b-desc .b-block .text-desc .left {
-				width: 690px;
+				width: 670px;
 				margin-top: 38px;
 			}
 				.b-desc .b-block .text-desc .left p {
-					font-size: 16px;
+					font-size: 18px;
 					font-family: "pf_bague_sans_proregular";
 					color: rgb(0, 0, 0);
 					line-height: 1.2;
 					margin-top: 21px;
 				}
+				.b-desc .b-block .text-desc .left .text-list {
+				margin-left: 30px;
+				margin-top: 25px;
+				}
+					.b-desc .b-block .text-desc .left .text-list li {
+						font-size: 18px;
+						font-family: "pf_bague_sans_proregular";
+						color: rgb(0, 0, 0);
+						line-height: 1.5;
+						list-style-type: disc;
+						padding-left: 5px;
+					}
 			.b-desc .b-block .text-desc .right {
-				width: 227px;
+				width: 290px;
 				margin-top: -6px;
 				background-color: #f5f4f1;
 			}
 				.b-desc .b-block .text-desc .right .spec {
-					padding: 49px 0 34px 13px; 
+					padding: 49px 13px 34px;
 				}
 
 					.b-desc .b-block .text-desc .right .spec h3 {
@@ -749,7 +761,7 @@ input:-moz-placeholder {
 
 					margin-top: 15px;margin-bottom: 12px;}
 					.b-desc .b-block .text-desc .right .spec h4 {
-						font-size: 12px;
+						font-size: 15px;
 						font-family: "pf_bague_sans_problack";
 						color: rgb(58, 32, 42);
 						line-height: 1.5;
@@ -792,21 +804,26 @@ input:-moz-placeholder {
 						}
 
 		.b-desc .b-block .features {
-
-		font-size: 0;margin-top: 64px;}
+			font-size: 0;
+			margin-top: 64px;
+			display: inline-block;
+			text-align: left;
+			margin-left: -25px;
+		}
 			.b-desc .b-block .features li {
-				width: 160px;
+				width: 167px;
 				display: inline-block;
 				box-sizing: border-box;
 				text-align: center;
-				border-left: 1px solid #fff;
 				vertical-align: top;
+				margin-bottom: 40px;
 			}
 				.b-desc .b-block .features li div {
 					position: relative;
 					display: inline-block;
-					width: 85px;
-					height: 85px;
+					text-align: center;
+					width: 106px;
+					height: 106px;
 					border-radius: 50%;
 					background-position: 50%;
 					background-repeat: no-repeat;
@@ -819,13 +836,12 @@ input:-moz-placeholder {
 					top: -14px;
 					text-transform: uppercase;
 					position: relative;
-					min-height: 24px;
-					width: 100px;
-					font-size: 10px;
+					font-size: 12px;
 					font-family: "pf_bague_sans_proregular";
 					line-height: 1.2;
 					letter-spacing: 1.3px;
-					display: inline-block;
+					display: block;
+					text-align: center;
 				}
 .b-floor {
 	background-color: #f5f4f1;
