--- a/css/layout.css
+++ b/css/layout.css
@@ -344,7 +344,7 @@ input:-moz-placeholder {
 			.b-header .b-menu li:last-child a{
 				padding-right: 0;
 			}
-	.b-mobile-nav,.b-mobile-menu {
+	.b-mobile-nav,.b-mobile-menu-cont,.b-overlay {
 		display: none;
 	}
 .b-content {
