--- a/css/layout-mobile.css
+++ b/css/layout-mobile.css
@@ -10,6 +10,111 @@ html, body {
 	line-height: 1.2;
 	letter-spacing: 6px;
 }
+.b-popup {
+	width: 600px;
+	/*margin-top: 60px;*/
+}
+	.b-popup h2{
+		font-size: 50px;
+		line-height: 60px;
+		padding-bottom: 20px;
+		margin-bottom: 30px;
+		border-bottom: 1px solid #3a202a;
+	}
+	.b-popup .input-cont {
+
+	margin-bottom: 20px;}
+		.b-popup .input-cont label {
+			font-size: 32px;
+			font-family: "pf_bague_sans_proregular";
+			line-height: 1.2;
+			display: block;
+			float: left;
+			margin-top: 10px;
+		}
+		.b-popup .input-cont input[type=text] {
+			display: block;
+			float: right;
+			width: 557px;
+			padding: 20px;
+			margin-top: 10px;
+			font-size: 32px;
+			border: 1px solid rgb(58, 32, 42);
+			background-color: transparent;
+		}
+	.b-popup h3,.b-popup h4{
+		font-size: 30px;
+		line-height: 1.2;
+		margin-bottom: 10px;
+	}
+	.b-popup h4 {
+		font-size: 25px;
+	}
+	.b-popup input[type=submit] {
+		background-color: #7f2e04;
+		border: none;
+		color: #fff;
+		padding: 20px 60px;
+		margin-top: 30px;
+		font-size: 32px;
+		margin-bottom: 20px;
+		cursor: pointer;
+	}
+	.b-popup input[type=submit]:hover {
+		background-color: #9E3B08;
+	}
+	.radio {
+		font-size: 0;
+		display: inline-block;
+	}
+
+	.radio li {
+		display: inline-block;
+		margin-left: 35px;
+		margin-top: 2px;
+	}
+	.radio input[type=radio] {
+		display: none;
+	}
+	.radio input[type=radio]:checked + label .checked {
+		display: block;
+	}
+	.radio label {
+		display: block;
+		cursor: pointer; 
+		position: relative;
+	}
+		.radio label .checked {
+			display: none;
+			position: absolute;
+			top: 3px;
+			left: -29px;
+			width: 32px;
+			height: 32px;
+			background-color: #71340f;
+			background-position: 50% 50%;
+		}
+		.radio label h5 {
+			padding-left: 22px;
+			padding-right: 19px;
+			font-size: 30px;
+			position: relative;
+			text-align: left;
+		}
+		.radio li:last-child label h5{
+			padding-right: 0;
+		}
+		.radio label h5:before {
+			position: absolute;
+			font-size: 0;
+			content: "s";
+			top: -3px;
+			left: -35px;
+			border: 2px solid #71340f;
+			width: 40px;
+			height: 40px;
+		}
+
 
 .line {
 	width: 54px;
@@ -560,3 +665,96 @@ html, body {
 			letter-spacing: 4px;
 			width: 750px;
 		}
+.b-inf {
+
+}
+	.b-inf .b-block {
+
+}
+		.b-inf .b-block h2{		
+			font-size: 55px;		
+			font-family: "pf_bague_sans_prothin";		
+			color: rgb(0, 0, 0);		
+			line-height: 1.2;	
+			text-align: left;		
+			padding: 60px 0 30px;
+		}
+		.b-inf .b-block .inf-cont {
+			padding: 80px 0;
+		}
+		.b-inf:first-child .b-block .inf-cont{
+			padding-top: 0px;
+		}
+			.b-inf .b-block .inf-cont .left {
+				width: 350px;
+				height: 350px;
+				background-image: url("../i/back-inf-1.png");
+				background-position: 50%;
+				background-repeat: no-repeat;
+				background-size: contain;
+				position: relative;
+				display: inline-block;
+				float: none !important;
+				margin-bottom: 150px;
+			}
+			.b-content .b-inf:nth-child(2n) .b-block .inf-cont .left {
+				background-image: url("../i/back-inf-2.png");
+				margin-bottom: 150px;
+			}
+				.b-inf .b-block .inf-cont .left img {
+					max-width: 100%;
+					margin-top: 57px;
+					width: 280px;
+				}
+				.b-inf .b-block .inf-cont .left span {
+
+				}
+				.b-inf .b-block .inf-cont .left .photo-btn {
+					width: 230px;
+					height: 230px;
+					background-image: url("../i/photo-back.png");
+					background-position: 50%;
+					background-repeat: no-repeat;
+					background-size: contain;
+					box-sizing: border-box;
+					padding-top: 119px;
+					position: absolute;
+					right: -97px;
+					top: 240px;
+					cursor: pointer;
+					font-family: "pf_bague_sans_promedium";
+					font-size: 23px;
+					text-transform: uppercase;
+					line-height: 1.2;
+					letter-spacing: 1.7px;
+				}
+					.b-inf .b-block .inf-cont .left .photo-btn:hover {
+						background-image: url("../i/photo-back-hover.png");
+						color: #fff;
+					}
+						.b-inf .b-block .inf-cont .left .photo-btn:hover:before {
+
+						}
+			.b-inf .b-block .inf-cont .right {
+				width: 100%;
+				text-align: left;
+			}
+				.b-inf .b-block .inf-cont .right .title {
+					font-size: 35px;
+					letter-spacing: 4px;
+					font-family: "pf_bague_sans_promedium";
+				}
+				.b-inf .b-block .inf-cont .right .line {
+					width: 70px;
+				}
+				.b-inf .b-block .inf-cont .right p {
+					max-height: 10000px;
+					font-size: 32px;
+					font-family: "pf_bague_sans_proregular";
+					color: rgb(0, 0, 0);
+					line-height: 1.2;
+					margin-top: 20px;
+				}
+.b-inf:first-child .fp-tableCell{
+	vertical-align: top;
+}
